test/errhandling/strict-try.good
strict-try.chpl:4: error: throwing call without try (strict mode)
Note: This source location is a guess.
